--- a/src/main/resources/com/example/fmradio/Advertiser/SponsorPlaylist.fxml
+++ b/src/main/resources/com/example/fmradio/Advertiser/SponsorPlaylist.fxml
@@ -21,5 +21,6 @@
       </TableView>
       <Button layoutX="432.0" layoutY="114.0" mnemonicParsing="false" onAction="#submitToSponsorButtonOnAction" text="Submit Button" />
       <Button layoutX="116.0" layoutY="114.0" mnemonicParsing="false" onAction="#loadPlaylistnamesButtonOnAction" text="Load" />
+      <Button fx:id="backFXID" layoutX="24.0" layoutY="14.0" mnemonicParsing="false" onAction="#backButtonOnAction" text="Back" />
    </children>
 </AnchorPane>
