--- a/src/main/resources/com/example/fmradio/Listener/ListenerPollParticipation.fxml
+++ b/src/main/resources/com/example/fmradio/Listener/ListenerPollParticipation.fxml
@@ -31,5 +31,6 @@
         </columns>
       </TableView>
       <Label fx:id="feedBackLabel" layoutX="349.0" layoutY="258.0" prefHeight="38.0" prefWidth="229.0" text=" Feed back on your Options" />
+      <Button fx:id="backFXID" layoutX="44.0" layoutY="17.0" mnemonicParsing="false" onAction="#backButtonOnAction" text="Back" />
    </children>
 </AnchorPane>
