--- a/src/main/resources/com/example/fmradio/Listener/SongRequest.fxml
+++ b/src/main/resources/com/example/fmradio/Listener/SongRequest.fxml
@@ -15,7 +15,7 @@
       <Label layoutX="36.0" layoutY="87.0" text="Artist name" />
       <TextField fx:id="songTtitleTextfield" layoutX="111.0" layoutY="47.0" />
       <TextField fx:id="artistNameTextField" layoutX="112.0" layoutY="83.0" />
-      <TextArea fx:id="shoutOutMessageTextArea" layoutX="38.0" layoutY="224.0" prefHeight="104.0" prefWidth="200.0" text="Shout out message " />
+      <TextArea fx:id="shoutOutMessageTextArea" layoutX="38.0" layoutY="224.0" prefHeight="104.0" prefWidth="200.0" />
       <TableView fx:id="songRequestTableView" layoutX="261.0" layoutY="186.0" prefHeight="200.0" prefWidth="305.0">
         <columns>
           <TableColumn fx:id="songTitleColumn" prefWidth="75.0" text="Song title" />
@@ -27,5 +27,7 @@
       <Button layoutX="411.0" layoutY="49.0" mnemonicParsing="false" onAction="#submitSongRequestButtonOnAction" prefHeight="51.0" prefWidth="113.0" text="Submit Request" />
       <DatePicker fx:id="requestdateDatePicker" layoutX="112.0" layoutY="125.0" />
       <Label layoutX="53.0" layoutY="129.0" text="Date" />
+      <Button fx:id="backFXID" layoutX="27.0" layoutY="14.0" mnemonicParsing="false" onAction="#backButtonOnAction" text="Back" />
+      <Label layoutX="86.0" layoutY="191.0" text="Shout Out Message" />
    </children>
 </AnchorPane>
