--- a/src/main/resources/com/example/fmradio/Listener/dedicateSong.fxml
+++ b/src/main/resources/com/example/fmradio/Listener/dedicateSong.fxml
@@ -25,5 +25,6 @@
       </TableView>
       <Button layoutX="52.0" layoutY="129.0" mnemonicParsing="false" onAction="#submitdedicatedSongButtonOnAction" text="Submit " />
       <Label fx:id="successLabel" layoutX="186.0" layoutY="122.0" prefHeight="46.0" prefWidth="159.0" text="Succes / Fail Label" />
+      <Button fx:id="backFXID" layoutX="24.0" layoutY="2.0" mnemonicParsing="false" onAction="#backButtonOnAction" text="Back" />
    </children>
 </AnchorPane>
