--- a/src/main/resources/com/example/fmradio/Producer/CoordinateWithAdvertiserFxml.fxml
+++ b/src/main/resources/com/example/fmradio/Producer/CoordinateWithAdvertiserFxml.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane prefHeight="440.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fmradio.Producer.CoordinateWithAdvertiserFxmlController">
    <children>
       <TableView fx:id="adSubmissionTableView" layoutX="44.0" layoutY="220.0" prefHeight="200.0" prefWidth="611.0">
@@ -21,7 +20,7 @@
         </columns>
       </TableView>
       <ComboBox fx:id="availableSlotComboBox" layoutX="155.0" layoutY="50.0" prefWidth="150.0" />
-      <TextArea layoutX="431.0" layoutY="14.0" onDragDetected="#messageToAdvertiserTextArea" prefHeight="118.0" prefWidth="252.0" />
+      <TextArea fx:id="messageToAdvertiserTextArea" layoutX="431.0" layoutY="14.0" prefHeight="118.0" prefWidth="252.0" />
       <Button layoutX="14.0" layoutY="174.0" mnemonicParsing="false" onAction="#finalizePlanOA" text="Finalize Plan" />
       <Button layoutX="578.0" layoutY="174.0" mnemonicParsing="false" onAction="#mainMenuOA" text="Main Menu" />
       <Label layoutX="75.0" layoutY="54.0" text="Available Slot" />
