--- a/src/main/resources/com/example/fmradio/Producer/PreShowCheckFxml.fxml
+++ b/src/main/resources/com/example/fmradio/Producer/PreShowCheckFxml.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane prefHeight="524.0" prefWidth="631.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fmradio.Producer.PreShowCheckFxmlController">
    <children>
       <DatePicker fx:id="testDateDatePicker" layoutX="108.0" layoutY="45.0" />
@@ -17,7 +16,8 @@
       <Button layoutX="257.0" layoutY="262.0" mnemonicParsing="false" onAction="#dryRunOA" text="Dry Run" />
       <Label layoutX="43.0" layoutY="49.0" text="Test Date" />
       <Label layoutX="47.0" layoutY="103.0" text="Test time " />
-      <Label layoutX="213.0" layoutY="316.0" onDragDetected="#showrResultLabel" prefHeight="69.0" prefWidth="175.0" text="Label" />
+      <Label fx:id="showResultLabel" layoutX="162.0" layoutY="315.0" prefHeight="69.0" prefWidth="291.0" text="Label" />
       <Label layoutX="243.0" layoutY="410.0" text="Show Result" />
+      <Button layoutX="441.0" layoutY="438.0" mnemonicParsing="false" onAction="#mainMenuOA" text="Mainmenu" />
    </children>
 </AnchorPane>
