--- a/src/main/resources/com/example/fmradio/Producer/ProducerFxml.fxml
+++ b/src/main/resources/com/example/fmradio/Producer/ProducerFxml.fxml
@@ -4,17 +4,16 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Line?>
 
-
 <AnchorPane prefHeight="500.0" prefWidth="684.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fmradio.Producer.ProducerFxmlController">
    <children>
-      <Button layoutX="60.0" layoutY="55.0" mnemonicParsing="false" onAction="#approveSongContentOA" text="Approve Song Content" />
+      <Button layoutX="60.0" layoutY="55.0" mnemonicParsing="false" onAction="#assignPlaylistOA" text="Assign Playlist" />
       <Button layoutX="60.0" layoutY="154.0" mnemonicParsing="false" onAction="#assignPlaylistToRjOA" text="Assign Playlist To Rj" />
       <Button layoutX="60.0" layoutY="250.0" mnemonicParsing="false" onAction="#preShowCheckOA" text="Pre Show Check" />
       <Button layoutX="60.0" layoutY="339.0" mnemonicParsing="false" onAction="#coordinateWithAdvertiserOA" text="Coordinate With Advertiser" />
-      <Button layoutX="471.0" layoutY="55.0" mnemonicParsing="false" onAction="#monitorOngoingShowOA" text="Monitor Ongoing Show" />
-      <Button layoutX="484.0" layoutY="154.0" mnemonicParsing="false" onAction="#uploadFinalScriptOA" text="Upload Final Script" />
+      <Button layoutX="471.0" layoutY="55.0" mnemonicParsing="false" onAction="#monitorShowOA" text="Monitor Show" />
+      <Button layoutX="484.0" layoutY="154.0" mnemonicParsing="false" onAction="#uploadScriptOA" text="Upload Script" />
       <Button layoutX="487.0" layoutY="250.0" mnemonicParsing="false" onAction="#listenerFeedbackOA" text="Listener Feedback" />
-      <Button layoutX="485.0" layoutY="339.0" mnemonicParsing="false" onAction="#dailyShowReportOA" text="Daily Show Report" />
+      <Button layoutX="485.0" layoutY="339.0" mnemonicParsing="false" onAction="#dailyReportOA" text="Daily  Report" />
       <Line endX="-25.333343505859375" endY="275.33331298828125" layoutX="350.0" layoutY="114.0" startX="-31.333343505859375" startY="-62.66666030883789" />
       <Button layoutX="306.0" layoutY="435.0" mnemonicParsing="false" onAction="#signoutOA" text="Signout" />
    </children>
